--- a/AgeOfLaika/Base.lproj/Main.storyboard
+++ b/AgeOfLaika/Base.lproj/Main.storyboard
@@ -13,7 +13,7 @@
                         <viewControllerLayoutGuide type="bottom" id="2fi-mo-0CV"/>
                     </layoutGuides>
                     <view key="view" contentMode="center" id="kh9-bI-dsS">
-                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Human Years" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="aY9-Fs-pIa">
@@ -60,6 +60,18 @@
                                     <rect key="frame" x="0.0" y="216" width="320" height="352"/>
                                 </variation>
                             </imageView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="a1z-nO-k2w">
+                                <rect key="frame" x="-23" y="-15" width="46" height="30"/>
+                                <state key="normal" title="Convert to Real Dog Years">
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <variation key="widthClass=compact" fixedFrame="YES">
+                                    <rect key="frame" x="16" y="162" width="288" height="30"/>
+                                </variation>
+                                <connections>
+                                    <action selector="convertToRealDogYearsButtonPress:" destination="vXZ-lx-hvc" eventType="touchUpInside" id="Dtw-xR-wy4"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <variation key="default">
@@ -69,6 +81,7 @@
                                 <exclude reference="OKO-Us-dRg"/>
                                 <exclude reference="o2m-e1-R8k"/>
                                 <exclude reference="eaE-rI-GD5"/>
+                                <exclude reference="a1z-nO-k2w"/>
                             </mask>
                         </variation>
                         <variation key="widthClass=compact">
@@ -78,6 +91,7 @@
                                 <include reference="OKO-Us-dRg"/>
                                 <include reference="o2m-e1-R8k"/>
                                 <include reference="eaE-rI-GD5"/>
+                                <include reference="a1z-nO-k2w"/>
                             </mask>
                         </variation>
                     </view>
